Fix hero image to properly show Juwan's shadow on mobile devices

--- a/src/components/film/Hero.css
+++ b/src/components/film/Hero.css
@@ -114,8 +114,8 @@
   }
   
   .hero {
-    background-position: 50% center;
-    filter: contrast(110%);
+    background-position: 20% center;
+    filter: contrast(115%);
   }
   
   .hero-overlay {
